# RB3-Auto-Drive

./: CODE_REVIEW.md  Dockerfile.rosdlr  README.md
artifacts/dlr_models/clsModel/: model.json  model.params
artifacts/dlr_models/segModel/: compiled_model.json
artifacts/snpe_models/: classification-model-2499.dlc  seg-model-15199.dlc
bot_py/: bot_bypass.py  bot_control.py  bot_forward.py  bot_init.py
dlr_server/: image_resize.cpp  image_resize.hpp  server.cpp  server.hpp
main_application/: Makefile  common.mk  count.sh
main_application/include/: HardwareAPI.h  Predict.hpp  QComOMXMetadata.h  gr_priv_handle.h  gralloc_priv.h
main_application/src/: Android.mk  BBox.cpp  BBox.hpp  BufferManager.cpp  BufferManager.h  CMakeLists.txt  DepthCalc.cpp  DepthCalc.hpp  OMX_Encoder.cpp  OMX_Encoder.h  QCameraHAL3Base.cpp  QCameraHAL3Base.h  QCameraHAL3Device.cpp  QCameraHAL3Device.h  QCameraHAL3Test.h  QCameraHAL3TestConfig.cpp  QCameraHAL3TestConfig.h  QCameraHAL3TestPreview.cpp  QCameraHAL3TestPreview.h  QCameraHAL3TestSnapshot.cpp  QCameraHAL3TestSnapshot.h  QCameraHAL3TestTOF.cpp  QCameraHAL3TestTOF.h  QCameraHAL3TestVideo.cpp  QCameraHAL3TestVideo.h  QCameraHALTestMain.cpp  QCameraHALTestMain.hpp  QCameraTestVideoEncoder.cpp  QCameraTestVideoEncoder.h  TestLog.cpp  TestLog.h  client.cpp  client.hpp  g_version.h  image_resize.cpp  image_resize.hpp  tl_dev_eeprom.h  version.pl
snpe_shared_library/: Makefile.aarch64-linux-gcc4.9  Makefile.x86_64-linux-clang
snpe_shared_library/jni/: LoadModel.cpp  LoadModel.hpp  Predict.cpp
